<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2016 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string translatable="false" name="app_name">HelloAR Java</string>
  <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
  <string translatable="false" name="button_text_enable_depth">Enable</string>
  <string translatable="false" name="button_text_disable_depth">Disable</string>
  <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
  <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
  <string translatable="false" name="done">Done</string>
  <string-array translatable="false" name="depth_options_array">
    <item>Enable depth</item>
    <item>Show depth map</item>
  </string-array>
  <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
  <string-array translatable="false" name="instant_placement_options_array">
    <item>Enable Instant Placement</item>
  </string-array>

  <string name="label_scale_y">⇕</string>
  <string name="decrease_size">Disminuir tamaño</string>
  <string name="increase_size">Aumentar tamaño</string>
  <string name="label_y">Y</string>
  <string name="rotate_y_left">Rotar Y izquierda</string>
  <string name="rotate_y_right">Rotar Y derecha</string>
  <string name="label_x">X</string>
  <string name="rotate_x_up">Rotar X arriba</string>
  <string name="rotate_x_down">Rotar X abajo</string>
  <string name="label_z">Z</string>
  <string name="rotate_z_left">Rotar Z izquierda</string>
  <string name="rotate_z_right">Rotar Z derecha</string>
  <string name="label_tx">TX</string>
  <string name="move_x_minus">Mover X -</string>
  <string name="move_x_plus">Mover X +</string>
  <string name="label_ty">TY</string>
  <string name="move_y_minus">Mover Y -</string>
  <string name="move_y_plus">Mover Y +</string>
  <string name="label_tz">TZ</string>
  <string name="move_z_minus">Mover Z -</string>
  <string name="move_z_plus">Mover Z +</string>
  <string name="reset_coords">Resetear coordenadas</string>
  <string name="label_reset">Reset</string>
  <string name="slide_page_title">Página %1$d</string>
  <string name="slide_content_default">Contenido de la diapositiva&#8230;</string>
  <string name="previous">Anterior</string>
  <string name="next">Siguiente</string>
  <string name="close">Cerrar</string>
  <string name="settings_description">Settings</string>

  <string name="move_x_pos">Mover X positivo</string>
  <string name="move_x_neg">Mover X negativo</string>
  <string name="move_y_pos">Mover Y arriba</string>
  <string name="move_y_neg">Mover Y abajo</string>
  <string name="move_z_pos">Alejar Z</string>
  <string name="move_z_neg">Acercar Z</string>
  <string name="rotate_left">Rotar Izquierda</string>
  <string name="rotate_right">Rotar Derecha</string>
  <string name="scale_up">Aumentar Escala</string>
  <string name="scale_down">Disminuir Escala</string>
  <string name="slide_page_indicator">Página %1$s de %2$s</string>

  <string name="ar_prompt_title">¡Llegaste a tu destino!</string>
  <string name="ar_prompt_message">¿Deseas abrir la cámara de Realidad Aumentada para ver el modelo %1$s?</string>
  <string name="open_camera">Abrir Cámara</string>
  <string name="later">Más tarde</string>

  <string name="model_list_title">Modelos Disponibles</string>
  <string name="nav_models">Modelos</string>
  <string name="nav_map">Mapa</string>
  <string name="nav_add">Agregar</string>
  <string name="model_item_description">Toca para descargar y ver en AR</string>
  <string name="downloading_model">Descargando modelo&#8230;</string>
  <string name="label_downloading">Descargando&#8230;</string>
  <string name="label_open_ar">Abrir RA</string>
  <string name="download_failed">Error al descargar el modelo</string>

  <string name="location_permission_denied">Permiso de ubicación denegado</string>
  <string name="location_not_found">No se pudo obtener la ubicación</string>
  <string name="gps_internet_error">Activa GPS e internet</string>
  <string name="distance_format">📍 Distancia: %1$d metros</string>
  <string name="point_near">✅ Punto educativo cercano</string>
  <string name="point_detected">📌 Punto educativo detectado</string>
  <string name="point_title">Punto Educativo</string>
  <string name="point_snippet">Zona educativa interactiva</string>
  <string name="map_guide_title">Guía Educativa RA</string>
  <string name="status_calculating">Calculando distancia&#8230;</string>
  <string name="label_distance_empty">Distancia: &#8212; metros</string>
  <string name="btn_open_ar_long">🚀 Abrir Experiencia RA</string>

</resources>
